--- a/home.css
+++ b/home.css
@@ -111,8 +111,6 @@ transition:transform .3s
 transform:translateX(14px)
 }
 
-/* MENU */
-
 #menu-btn{
 position:relative;
 z-index:1001
@@ -127,22 +125,20 @@ width:90%;
 max-width:300px;
 background:var(--card-bg);
 backdrop-filter:blur(12px);
-padding:22px 14px;
+padding:18px 12px;
 border-radius:12px;
 display:none;
 z-index:1000;
+text-align:center;
+}
+
+#menu-modal.visible{
 display:flex;
 flex-direction:column;
 align-items:center;
 justify-content:center;
-gap:14px;
-text-align:center
+gap:12px;
 }
-
-#menu-modal.visible{
-display:flex
-}
-
 #close-menu{
 position:absolute;
 top:12px;
