--- a/apropos.css
+++ b/apropos.css
@@ -61,10 +61,11 @@ main {
 
 main section {
     max-width: 900px;
-    width: 95%;
+    width: 80%;
     background: var(--card-bg);
-    border-radius: 14px;
-    padding: clamp(16px, 5vw, 30px);
+    border-radius: 12px;
+    margin-bottom: 12px;
+    padding: 18px 24px;
     box-shadow: 0 8px 25px rgba(0,0,0,0.15);
     transition: 0.3s;
 }
